# Pedestrian-count-system

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  main.py  pyproject.toml  tox.ini
.github/workflows/: codeql-analysis.yml
configs/: configs.py
dashboard/: app.py
logger/: logger.py
pedestrian_count_system/: api_call.py  etl.py
tests/: test_pedestrian_count_system.py
