[tool.poetry]
name = "pedestrian-count-system"
version = "0.1.0"
description = ""
authors = ["Adebayo Akinlalu <bayoakinlalu@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
pyspark = "^3.3.2"
pandas = "^1.2.4"
streamlit = "^1.11.1"
aiohttp = "^3.9.4"
aiofiles = "^0.7.0"
aiobotocore = "^1.3.1"
eliot = "^1.13.0"
eliot-tree = "^21.0.0"
requests = "^2.32.0"
findspark = "^1.4.2"
fire = "^0.4.0"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.0.17"
tox = "^3.23.1"
black = "^24.3"
isort = "^5.9.1"
mypy = "^0.910"
flake8 = "^3.9.2"
bandit = "^1.7.0"
safety = "^1.10.3"
pre-commit = "^2.13.0"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
